syntax = "proto3";
package eagleApi;
option go_package = "github.com/h-varmazyar/Gate/services/eagle/api";
import "api/src/misc.proto";

service SignalService {
  rpc Start(SignalStartReq) returns(api.Void);
  rpc Stop(api.Void) returns(api.Void);
}

message SignalStartReq{
  // @inject_tag: json:"brokerage_id"
  string BrokerageID = 1;
  // @inject_tag: json:"strategy_id"
  string StrategyID = 2;
  // @inject_tag: json:"with_trading"
  bool WithTrading = 3;
}